// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Yoo Form Star rating Component Re-rendering Should re-render when star number is updated 1`] = `
<yoo-form-star-rating
  class="hydrated"
  data-yoo-form-star-rating-host=""
  stars="7"
>
  
  <div
    attr-layout="row"
    class="star-rating-container"
    data-yoo-form-star-rating=""
  >
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
  </div>
</yoo-form-star-rating>
`;

exports[`Yoo Form Star rating Component Rendering Should render with a correct structure 1`] = `
<yoo-form-star-rating
  class="hydrated"
  data-yoo-form-star-rating-host=""
>
  
  <div
    attr-layout="row"
    class="star-rating-container"
    data-yoo-form-star-rating=""
  >
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
  </div>
</yoo-form-star-rating>
`;

exports[`Yoo Form Star rating Component Rendering Should render with a specific star number 1`] = `
<yoo-form-star-rating
  class="hydrated"
  data-yoo-form-star-rating-host=""
  stars="7"
>
  
  <div
    attr-layout="row"
    class="star-rating-container"
    data-yoo-form-star-rating=""
  >
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
    <div
      class="star-container"
      data-yoo-form-star-rating=""
    >
      <i
        class="yo-star"
        data-yoo-form-star-rating=""
      />
    </div>
  </div>
</yoo-form-star-rating>
`;
